--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -144,17 +144,7 @@ const tocSections = await getTOCSections(currentPostId)
                       height={20}
                       class="rounded-full"
                     />
-                    {author.isRegistered ? (
-                      <Link
-                        href={`/authors/${author.id}`}
-                        underline
-                        class="text-foreground"
-                      >
-                        <span>{author.name}</span>
-                      </Link>
-                    ) : (
-                      <span>{author.name}</span>
-                    )}
+                    <span class="text-foreground">{author.name}</span>
                   </div>
                 ))}
               </div>
