--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,6 +23,7 @@ import logo from '../../public/static/logo.svg'
           NAV_LINKS.map((item) => (
             <Link
               href={item.href}
+              external={item.href.startsWith('http')}
               class="text-foreground/60 hover:text-foreground capitalize transition-colors"
             >
               {item.label}
